# wikitext

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  trainer.rs
tests/: cli.rs
